cool interaction idea on last row of piano

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,9 @@
         <script src="scripts/directives/directive.background.js"></script>
         <script src="scripts/directives/directive.rotate.js"></script>
         <script src="scripts/directives/directive.logo.js"></script>
+        <script src="scripts/controllers/drawer.js"></script>
+        <script src="scripts/services/fonts.js"></script>
+        <script src="scripts/services/colors.js"></script>
         <!-- endbuild -->
 </body>
 </html>
