--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Oswald:200,400/Vollkorn:400/Rokkitt:100,400/Crimson:400/Old+Standard:400">
   </head>
   <body ng-app="webPoster">
     <!--[if lt IE 7]>
@@ -66,6 +68,7 @@
         <script src="scripts/controllers/drawer.js"></script>
         <script src="scripts/services/fonts.js"></script>
         <script src="scripts/services/colors.js"></script>
+        <script src="scripts/services/Config.js"></script>
         <!-- endbuild -->
 </body>
 </html>
