--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
+
+    <!-- android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <!-- iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="translucent-black">
+    <meta name="apple-mobile-web-app-title" content="My App">
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -68,7 +76,7 @@
         <script src="scripts/controllers/drawer.js"></script>
         <script src="scripts/services/fonts.js"></script>
         <script src="scripts/services/colors.js"></script>
-        <script src="scripts/services/Config.js"></script>
+        <script src="scripts/services/config.js"></script>
         <!-- endbuild -->
 </body>
 </html>
